[package]
name = "webview2autoinstall"
version = "0.1.0"
authors = ["Tim-Paik <timpaik@163.com>"]
edition = "2021"
description = "Detect and automatically install WebView2 if not installed"
repository = "https://github.com/Tim-Paik/webview2autoinstall"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0"
minreq = { version = "2.6.0", features = ["https-native"] }
webview2-com = "0.18"
windows = { version = "0.38", features = [
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_UI_Shell",
    "Win32_System_Registry",
] }

[[bin]]
name = "webview2autoinstall"
required-features = ["bin"]

[build-dependencies]
embed-manifest = { version = "1.3.1", optional = true }

[features]
bin = ["embed-manifest"]
